# test-docs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/architecture/: implementation-summary.md
src/workflow_clinic/: __init__.py  main.py
tests/: test_smoke.py
